<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black_val"
    tools:context=".agents.detailagent.DetailAgentActivity">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button" />

    <ImageView
        android:id="@+id/bg_detail_img"
        android:transitionName="background"
        android:layout_width="285dp"
        android:layout_height="320dp"
        android:layout_marginTop="8dp"
        android:alpha="0.4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn"
        android:scaleType="centerCrop"
        tools:srcCompat="@drawable/sova_bg"
        android:contentDescription="@string/background_image" />

    <TextView
        android:id="@+id/agent_detail_tv"
        android:transitionName="agent_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/tungsten_bold"
        android:textAllCaps="true"
        android:textColor="@color/red_val"
        android:textSize="70sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.594"
        app:layout_constraintStart_toStartOf="@+id/bg_detail_img"
        app:layout_constraintTop_toTopOf="@+id/bg_detail_img"
        tools:text="@string/agent" />


    <ImageView
        android:id="@+id/agent_detail_img"
        android:transitionName="agent"
        android:layout_width="255dp"
        android:layout_height="320dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/back_btn"
        android:scaleType="centerCrop"
        tools:srcCompat="@drawable/sova"
        android:contentDescription="@string/agent_image" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dinnextw1g_med"
        android:text="@string/biography"
        android:textColor="@color/white_val"
        android:textSize="20sp"
        android:layout_marginStart="24dp"
        android:letterSpacing="-0.05"
        android:layout_marginTop="12dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/agent_detail_img" />

    <TextView
        android:id="@+id/biography_desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="8dp"
        android:alpha="0.7"
        android:ellipsize="end"
        android:fontFamily="@font/dinnextw1g_normal"
        android:letterSpacing="-0.05"
        android:maxLines="10"
        tools:text="@string/biography"
        android:textColor="@color/white_val"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <ImageView
        android:id="@+id/favorites_btn"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:background="@drawable/button_ability"
        android:padding="6dp"
        android:src="@drawable/ic_baseline_favorite_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/biography_desc"
        android:contentDescription="@string/favorite_button" />




</androidx.constraintlayout.widget.ConstraintLayout>